# PCR-Template-Generator

./: .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  LICENSE  PCR_Template_Generator.ipynb  README.md  SECURITY.md  pyproject.toml  sequence_statistics_report.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  check.yml  codeql.yml  sync-examples.yml  test-examples.yml  version-bump.yml
examples/: README.md  requirements.txt
examples/advanced_usage/: custom_constraints.py  sequence_analysis.py
examples/basic_usage/: batch_generation.py  custom_parameters.py  simple_generation.py
examples/cli_examples/: cli_analysis.sh  cli_basic.sh  cli_batch.sh
examples/integration/: jupyter_notebook.ipynb
scripts/: handle_dependabot_prs.py  sync_examples.py  validate_examples.py
src/pcr_template_generator/: __init__.py  cli.py  generator.py  rules.py  sequence.py
tests/: __init__.py  test_cli.py  test_examples.py  test_examples_execution.py  test_generator.py  test_linting.py  test_rules.py  test_sequence.py
