[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcr-template-generator"
version = "2.0.2"
description = "A Python library for generating optimized DNA templates for PCR primers and probes using simulated annealing"
authors = [{name = "Reto", email = "reto@example.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = [
    "pcr",
    "dna",
    "primers",
    "probes",
    "bioinformatics",
    "molecular-biology",
    "qpcr",
    "template-generation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "biopython>=1.80",
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/retospect/PCR-Template-Generator"
Repository = "https://github.com/retospect/PCR-Template-Generator"
Documentation = "https://github.com/retospect/PCR-Template-Generator"
"Bug Tracker" = "https://github.com/retospect/PCR-Template-Generator/issues"

[project.scripts]
pcr-template-generator = "pcr_template_generator.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["examples", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]
